# natural-mold

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  CHECKPOINT.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  NOTICES.md  PLAN.md  README.md  README_EN.md  README_KO.md  SECURITY.md  SPEC.md  TASKS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  uv.toml
backend/alembic/: env.py
backend/alembic/versions/: 60843b94d265_add_skills_and_agent_skills_tables.py  7c8b80bbda62_add_builder_sessions_table.py  9e6e7f63c3b6_add_agent_triggers.py  a83f230d7e69_make_tool_user_id_nullable_add_is_system.py  aa5b4cc59ddb_initial_tables.py  b1dae1c5b83a_add_conversation_is_pinned.py  b4e1a2f3c5d7_add_agent_tools_config.py  c4a9f1e2b387_add_agent_image_path.py  dcb1dff2e64d_add_middleware_configs_to_agents.py  e663e620520b_add_type_and_storage_path_to_skills.py  f73536bd0236_add_agent_is_favorite_model_params_and_.py  m10_prebuilt_connection_migration.py  m11_custom_credential_migration.py  m12_drop_legacy_columns.py  m13_drop_mcp_legacy.py  m14_uniq_mcp_tool_per_conn.py  m15_add_message_timestamps.py  m16_add_opener_questions.py  m17_add_agent_subagents.py  m18_greenfield_credentials.py  m19_add_models_source.py  m20_add_health_check_history.py  m21_add_daily_spend_aggregates.py  m22_add_agent_model_fallback.py  m23_add_models_default_credential.py  m24_add_credential_is_system.py  m25_add_agent_mcp_tools.py  m26_mcp_health_and_system.py  m27_message_feedback.py  m28_message_attachments.py  m29_conversation_active_branch.py  m2_remove_messages_table.py  m30_share_links.py  m31_share_links_active_unique.py  m32_add_message_events.py  m33_add_linked_message_ids.py  m34_message_events_streaming_status.py  m35_builder_sessions_agent_fk_set_null.py  m36_multiuser_auth.py  m37_refresh_token_replaced_by.py  (+43 more)
backend/app/: config.py  database.py  dependencies.py  error_codes.py  exception_handlers.py  exceptions.py  http_ssl.py  main.py  rate_limit.py  router_registry.py  scheduler.py
backend/app/agent_api/: __init__.py  dependencies.py  runtime_service.py  security.py  service.py  sse_adapter.py
backend/app/agent_runtime/: ag_ui_adapter.py  ag_ui_protocol_adapter.py  ag_ui_streaming.py  agent_stream_runner.py  checkpointer.py  creation_agent.py  credential_resolution.py  e2e_langgraph_v3_script.py  e2e_scripted_model.py  event_broker.py  event_names.py  executor.py  filesystem_permissions.py  fix_agent.py  google_auth.py  google_tools.py  google_workspace_tools.py  identity.py  langgraph_agent_stream_runner.py  langgraph_lifecycle_events.py  langgraph_pending_inputs.py  langgraph_protocol_adapter.py  langgraph_reasoning_redaction.py  langgraph_streaming.py  langgraph_tool_event_synthesis.py  legacy_event_projection.py  mcp_cache.py  mcp_client.py  mcp_tool_loader.py  memory_event_projection.py  message_utils.py  middleware_registry.py  model_factory.py  naver_tools.py  protocol_events.py  protocol_persistence.py  protocol_redaction.py  protocol_side_effects.py  protocol_usage.py  run_secrets.py  (+18 more)
backend/app/auth/: __init__.py  cookies.py  jwt.py  password.py
backend/app/credentials/: __init__.py  authenticate.py  domain.py  field.py  interpolation.py  mcp_oauth_client.py  oauth2_base.py  oauth_service.py  registry.py  rotation.py  service.py  tester.py  validation.py
backend/app/data/: litellm_model_catalog.json  mcp_server_registry.json
backend/app/hooks/: __init__.py  base.py  registry.py
backend/app/marketplace/: access.py  agent_spec.py  credential_requirements.py  evaluation_preparation.py  install_locks.py  install_service.py  k_skill_importer.py  k_skill_requirements.py  mcp_server.py  origin_service.py  payloads.py  publish_common.py  publish_service.py  redaction.py  schemas.py  secret_scan.py  service.py  skill_runtime.py
backend/app/mcp/: __init__.py  auth.py  client.py  discovery.py  domain.py  invocation.py  oauth.py
backend/app/models/: __init__.py  agent.py  agent_api.py  agent_blueprint.py  agent_creation_session.py  agent_subagent.py  agent_trigger.py  agent_trigger_run.py  audit_event.py  builder_session.py  connection.py  conversation.py  conversation_artifact.py  conversation_run.py  credential.py  credential_audit_log.py  credential_default.py  credential_oauth_state.py  daily_spend_agent.py  daily_spend_model.py  daily_spend_user.py  health_check_history.py  llm_provider.py  marketplace.py  mcp_server.py  mcp_tool.py  memory.py  message_attachment.py  message_event.py  message_feedback.py  model.py  refresh_token.py  share_link.py  skill.py  skill_builder_session.py  skill_evaluation.py  skill_feedback.py  skill_revision.py  (+6 more)
backend/scripts/: backfill_message_event_redaction.py  backfill_skill_revisions.py  google_oauth_setup.py  migrate_mock_to_real_user.py  verify_atlassian_mcp_access.py
backend/skill-node/: package.json
backend/tests/: artifact_test_helpers.py  conftest.py  skill_builder_test_helpers.py  skill_evaluation_worker_helpers.py  test_ag_ui_adapter.py  test_agent_api_compat_adapters.py  test_agent_api_control_plane.py  test_agent_api_conversation_source.py  test_agent_api_keys.py  test_agent_blueprint_model.py  test_agent_blueprint_model_resolve.py  test_agent_creation_extended.py  test_agent_runtime_profile.py  test_agent_runtime_public_api.py  test_agent_service_extended.py  test_agent_tool_config.py  test_agents.py  test_artifact_models.py  test_artifact_paths.py  test_artifact_service.py  test_artifact_storage.py  test_artifacts_router.py  test_assistant_agent.py  test_assistant_read_tools.py  test_assistant_router.py  test_assistant_service.py  test_assistant_write_tools.py  test_attachment_message_id_backfill.py  test_audit_events.py  test_audit_integration.py  test_auth_login.py  test_auth_profile.py  test_auth_refresh.py  test_auth_register.py  test_backfill_message_event_redaction.py  test_branding.py  test_builder_helpers_approval.py  test_builder_orchestrator.py  test_builder_phase5.py  test_builder_resume_wire.py  (+248 more)
(+1701 files in other folders)
