[project]
name = "moldy-backend"
version = "0.1.0"
description = "Moldy — AI Agent Builder Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",

    # Validation & settings
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # LangChain ecosystem (1.0 LTS)
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",

    # Model providers
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",

    # LangGraph persistence
    "langgraph-checkpoint-postgres",

    # MCP
    "mcp",

    # HTTP client (custom tool calls, MCP)
    "httpx>=0.27",

    # Builtin tools
    "langchain-community",
    "ddgs>=9.0",
    "beautifulsoup4>=4.12",

    # Scheduler
    "apscheduler>=3.10,<4.0",
    "psycopg2-binary>=2.9",

    # Encryption (API keys)
    "cryptography>=43.0",

    # Google Workspace API
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort (import sorting)
  "UP",             # pyupgrade (modern Python syntax)
  "B",              # bugbear (common bug patterns)
  "SIM",            # simplify (unnecessary complexity)
  "ASYNC",          # async anti-patterns
]
ignore = [
  "B008",           # Depends() in function defaults — idiomatic FastAPI
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402", "SIM115"]                # load_dotenv + SSL setup before imports
"app/models/*.py" = ["F821"]                      # SQLAlchemy forward refs with __future__ annotations
"app/agent_runtime/creation_agent.py" = ["E501"]  # long lines in prompt templates
"app/seed/default_tools.py" = ["E501"]            # long lines in JSON seed data

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
