[project]
name = "moldy-backend"
version = "0.1.0"
description = "Moldy — AI Agent Builder Backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.18",  # uploads 라우터의 multipart 폼 파싱 (FastAPI 명시)
    "orjson>=3.10",  # default_response_class — Rust 기반 빠른 JSON
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    # Validation & settings
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # LangChain ecosystem (1.0 LTS)
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "langfuse>=3.8,<4.0",
    # Model providers
    "langchain-openai>=1.2,<2.0",
    "langchain-anthropic>=1.4,<2.0",
    "langchain-google-genai>=4.2,<5.0",
    # LangGraph persistence
    "langgraph-checkpoint-postgres>=3.0,<4.0",
    # MCP
    "mcp",
    # HTTP client (custom tool calls, MCP)
    "httpx>=0.27",
    # Builtin tools
    "langchain-community>=0.4,<0.5",
    "ddgs>=9.0",
    "beautifulsoup4>=4.12",
    # Scheduler
    "apscheduler>=3.10,<4.0",
    # Encryption (API keys)
    "cryptography>=43.0",
    # External secrets (Vault)
    "hvac>=2.3",
    # Google Workspace API
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "python-frontmatter>=1.1.0",
    "pillow>=12.2.0",
    "deepagents>=0.6.8,<0.7.0",
    "langchain-mcp-adapters>=0.2.2,<0.3.0",
    "psycopg-binary>=3.3.3",
    "truststore>=0.10.4",
    # Rate limiting (public share endpoints)
    "slowapi>=0.1.9",
    # Auth (ADR-016): bcrypt password hashing + JWT signing.
    # passlib 1.7.4 trips bcrypt>=5 (detect_wrap_bug raises on the 72-byte
    # probe). Pin bcrypt<5 until passlib 1.8 ships.
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "pyjwt>=2.8",
    # EmailStr validation (Pydantic) for /api/auth payloads.
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring live Postgres (skipped by default via addopts)",
]
addopts = "-m 'not integration'"
filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning:passlib\\.utils",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["data/skills"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",              # isort (import sorting)
  "UP",             # pyupgrade (modern Python syntax)
  "B",              # bugbear (common bug patterns)
  "SIM",            # simplify (unnecessary complexity)
  "ASYNC",          # async anti-patterns
  "S",              # bandit security rules (SSRF, subprocess, hardcoded secrets, ...)
  "PGH",            # pygrep hooks — bans blanket `# noqa` / `# type: ignore` (code required)
  "DTZ",            # naive datetime construction (project policy: UTC-naive, exceptions noqa'd)
  "C4",             # unnecessary comprehensions / collection calls
  "SLF",            # private member access across objects
  "RET",            # return anti-patterns (needless assign/else/None)
  "PTH",            # os.path → pathlib
  "PT",             # pytest style (fixtures, parametrize, raises)
  "N",              # PEP8 naming
]
ignore = [
  "B008",           # Depends() in function defaults — idiomatic FastAPI
  # Codebase-wide exception naming is domain-style without the Error suffix
  # (SkillRevisionNotFound, EvalRunCancelled, SkillEvaluationQueueFull, ...).
  # Renaming 18 established classes is churn without safety value.
  "N818",
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402", "SIM115"]                # load_dotenv + SSL setup before imports
"app/models/*.py" = ["F821"]                      # SQLAlchemy forward refs with __future__ annotations
"app/seed/default_tools.py" = ["E501"]            # long lines in JSON seed data
"app/routers/skills.py" = ["ASYNC240"]            # sync pathlib for file serving (trivial I/O)
"app/routers/uploads.py" = ["ASYNC240"]           # sync pathlib for upload write/read (bounded I/O)
"app/services/skill_service.py" = ["ASYNC240"]    # sync pathlib for ZIP extraction (bounded I/O)
# PT is pytest style — in app/ it only false-positives on FastAPI endpoints
# named test_* (test_connection, test_credential, ...), which are not tests.
"app/**" = ["PT"]
# Vendored seed skill packages are content-hashed byte-for-byte by the
# marketplace seeder (default_marketplace_skills._content_hash) — ANY edit,
# including a lint fix or a noqa comment, bumps the published version and
# flags every install as "update available". Never lint-fix these files.
"app/seed/system_skill_packages/**" = ["RET504"]
# S101 assert = pytest idiom; S105/S106/S107 fixture passwords; S108 tmp paths in
# fixtures; S603 trusted subprocess in test harness — none run in production.
# SLF001 poking privates is standard test practice; DTZ naive datetimes in
# fixtures match the project's UTC-naive column policy; PT017/PT018 are
# style-contested (pytest introspection already shows which clause failed);
# N801 scenario class names (TestScenario_10_1_...) and N815 mixedCase mock
# fields mirror external wire contracts (serverInfo, inputSchema).
"tests/*" = [
  "S101", "S105", "S106", "S107", "S108", "S603",
  "SLF001", "DTZ", "PT017", "PT018", "N801", "N815",
]
# Migrations interpolate internal constants (table names, WHERE fragments) into
# SQL with values bound via params (S608); preflight checks deliberately skip
# missing tables (S112). Operator-run, no untrusted input.
"alembic/versions/*" = ["S608", "S112"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
# data/ is runtime content (installed skill packages, uploads, marketplace
# snapshots) — third-party scripts that vary per machine and must not gate
# type checking. alembic migrations are generated boilerplate.
exclude = ["data", ".venv", "alembic/versions"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "coverage>=7.13.5",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
]
